--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: SpawnMob
 author: jordanneil23
 main: com.jordanneil23.SpawnMob.SpawnMob
-version: 1.9.7
+version: 1.9.8_TEMPRELEASE
 commands:
   spawnmob:
     description:
