--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: SpawnMob
 author: jordanneil23
 main: com.jordanneil23.SpawnMob.SpawnMob
-version: 1.9.8_TEMPRELEASE
+version: 1.9.9
 commands:
   spawnmob:
     description:
@@ -234,5 +234,8 @@ permissions:
         description: |
         default: op
     spawnmob.wolf.tamed:
+        description: |
+        default: op
+    spawnmob.sheep.colors:
         description: |
         default: op
