Added support so other plugins can record the breaking of mobspawners. Thanks cstotts!

--- a/SpawnMob/SpawnMob.properties
+++ b/SpawnMob/SpawnMob.properties
@@ -6,3 +6,5 @@ spawn-limit=300
 use-permissions=true
 #Do you want mob spawners to drop a mobspawner when destroyed?
 mobspawners-have-drops=true
+#Enable Friendly?
+friendly-enabled=true
